--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,10 @@ White: #FFF
 */
 html, body {
     font-size: 20px;
+    font-family:fantasy;
+    
 }
 * {
-    border: 1px solid red;
     box-sizing: border-box;
 }
 h1 {
@@ -22,18 +23,24 @@ h2 {
 h3 {
     font-size: 1.5rem;
 }
+p {
+    line-height: 2rem;
+}
 header {
+    position: fixed;
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    margin-top: -0.4rem;
+    padding: 3px;
+    background-color: white;
 }
 .head-logo {
     width: 300px;
     margin-left: 5%;
 }
 nav {
-    position: fixed;
-    left: 70%;
-    top: 3%;
+
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -61,17 +68,26 @@ ul {
     background-repeat: no-repeat; width: auto;
     background-size:cover;
     color: white;
-    padding: 20%;
+    padding: 20% 20% 20% 20%;
 }
 .section2 {
-    height: 500px;
+    height: 600px;
+}
+.section2 h2 {
+    border-bottom: 3px solid #00B172;
+    width: fit-content;
+    margin: 10px auto 20px ;
+}
+.section2 h3 {
+    color: #00B172;
 }
 .article-row {
     display: flex;
     justify-content: center;
+    width: 900px;
     gap: 30px;
     padding: 20px;
-    margin: 0 20px
+    margin: auto;
 }
 .icon {
     width: 100px;
@@ -91,8 +107,12 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items:center;
+    color: #FFF;
     padding: 5% 3%;
     margin: 0px 35px;
+}
+.section3 h2 {
+    border-bottom: 3px solid #FFF
 }
 .section3 article {
     display: flex;
